syntax = "proto3";
package netmsg;

message DisconnectPlayer {
    int32 ClientSlot = 1;
}
