syntax = "proto3";
package netmsg;

message UpdatePlayer {
    int32 ClientSlot = 1;
    double X = 2;
    double Y = 3;
    bool IsKeyLeftPressed = 4;
    bool IsKeyRightPressed = 5;
}
